# pirix

./: .gitignore  CHANGES  LICENSE  Makefile  README.md  Xresources  azure-pipelines-1.yml  configure  mwmrc  pirixrc  xinitrc
demo/atlantis/: Makefile.arm  Makefile.smake
demo/glutmech/: Makefile.smake
demo/ideas/: Imakefile  Makefile  Makefile.sgi  Makefile.win  ideas  objects.h  track.c
icons/: emacs-2.xpm  emacs-3.xpm  emacs-4.xpm  emacs-6.xpm  emacs.xpm  icon.xcf  mathematica.xpm  surf-3.xpm  surf.xcf  surf.xpm  template.xpm  winterm.xpm  wolfram-2.xpm  wolfram.xpm
plan/: clipboard.md  emwh.md  icccm.md
src/: Makefile  NOTES  Xresources  mwmrc  pirixrc  xinitrc
src/Xmd/: AdjView.h  Help.c  Help.h  HelpP.h  Makefile  Makefile.in  Menus.c  Menus.h  PrintP.h
src/demo/: Makefile
src/demo/atlantis/: Makefile.arm  README.md
src/demo/gears/: Makefile  gears.c
src/demo/glutmech/: Makefile.arm  glutmech.c
src/demo/ideas/: Makefile.arm
src/filemanager/: Imakefile  Makefile  Makefile.am  Makefile.in  Makefile~  README  XmdFilemanager.ad  actions.c  code.xpm  convert.c  dir.xpm  exec.xpm  file.xpm  filemanager.c  filemanager.h  filemanager.help  filemanager.man  interface.c  none.xpm  obj.xpm  pix.xpm  readdir.c  s_dir.xpm  s_exec.xpm  s_file.xpm  s_none.xpm  s_pix.xpm
src/filemanager/Xmd/: AdjView.c  Imakefile  Makefile  Makefile.am  Print.c  Print.h  README  helpOn.help  onHelp.c
src/icons/: Makefile  bg.xcf  icon.xcf
